src/tests/render_snapshots/snapshots/sabiql__render_snapshots__overlays__sql_modal_normal_cursor_at_tail.snap
---
source: src/tests/render_snapshots/overlays.rs
assertion_line: 213
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                                                                                                                  
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│ Press 'r' to load metadata            │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                       ││(select a table)                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                ╭ SQL Editor ── [SQL] [Plan] [Compare] ────────────────────────────────────────────────────────────────────────────────────────────╮               │
│                │ SELECT 1                                                                                                                         │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │───────────────┘
│                │                                                                                                                                  │───────────────┐
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │ ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── │               │
│                │  [NORMAL]                                                                                                                 Ready  │               │
│                ╰ ⌥Enter/F5: Run │ ^E: Explain │ i: Insert │ ^X: External Edit │ Tab/⇧Tab: Switch │ Esc: Close ────────────────────────────────────╯               │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
